pkl-core/src/test/files/LanguageSnippetTests/input/errors/underscoreLambda.pkl
local lambda = (_, x: Int) -> `_` + x

res = lambda.apply(1, 1)
